functions add. proofread and style soon

--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+
+* {
+
+}
+
 #highscore-btn {
   border: none;
   background: none;
 }
 
-#start-btn {
-  background: gray;
-  color:black;
-  border-color: black;
-  border-radius: 10px;
-}
